# GeomLib

./: CMakeLists.txt
inc/: Geom.h  Geom.hpp  GmUtilities.hpp  IVec3d.hpp  IVec3f.hpp  IntinsicGeom.h
src/: GmUtilities.cpp  IVec3d.cpp  IVec3f.cpp  IntinsicGeom.cpp
tests/: CMakeLists.txt  IntinsicGeomUnit.cpp  test_GmUtilities.cpp  test_IVec3d.cpp  test_IVec3f.cpp
